fix the input form to be reseted after use it

--- a/src/pages/HomePage.html
+++ b/src/pages/HomePage.html
@@ -145,7 +145,7 @@
           <h3 id="post-publisher-name">Your name</h3>
         </div>
 
-        <form action="#">
+        <form action="javascript:void()">
           <input
             class="create-post-input"
             id="create-post-title"
@@ -164,7 +164,9 @@
           ></textarea>
           <input id="create-post-img" type="file" />
           <div class="hix-align-right">
-            <button type="submit" onclick="publishBtnClicked()">Publish</button>
+            <button type="submit" onclick="publishBtnClicked('homePage')">
+              Publish
+            </button>
           </div>
         </form>
       </div>
