--- a/src/pages/ProfilePage.html
+++ b/src/pages/ProfilePage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles/homePage.css" />
-    <link rel="stylesheet" href="../styles/loginModal.css" />
+    <link rel="stylesheet" href="../styles/modals.css" />
     <link rel="stylesheet" href="../styles/profilePage.css" />
     <link
       rel="stylesheet"
