--- a/src/pages/HomePage.html
+++ b/src/pages/HomePage.html
@@ -174,14 +174,17 @@
 
       <!-- POST CARD -->
       <div id="posts-container"></div>
+      <!-- loader -->
+      <div id="myLoader"><span class="loader"></span></div>
+
       <!-- /POST CARD -->
     </div>
     <script src="../../node_modules/axios/dist/axios.min.js"></script>
     <script src="../code/api.js"></script>
+    <script src="../code/eventListeners.js"></script>
     <script>
       fetchPosts();
     </script>
-    <script src="../code/eventListeners.js"></script>
     <script src="../models/Post.js"></script>
   </body>
 </html>
