ready to deploy

--- a/src/pages/HomePage.html
+++ b/src/pages/HomePage.html
@@ -9,7 +9,8 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v6.0.0-beta1/css/all.css"
     />
-    <title>Social media</title>
+    <link rel="icon" href="../assets/logo.jpg" type="image/x-icon" />
+    <title>HixSocial</title>
   </head>
   <body>
     <!-- MODALS -->
