--- a/src/pages/ProfilePage.html
+++ b/src/pages/ProfilePage.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v6.0.0-beta1/css/all.css"
     />
-    <title>Social media</title>
+    <title>HixSocial</title>
   </head>
   <body>
     <!-- MODALS -->
