--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -107,7 +107,7 @@
           </label>
         </div>
         <div class="nav-center">
-          <a href="HomePage.html" class="navlink navlink-left">Home</a>
+          <a href="index.html" class="navlink navlink-left">Home</a>
           <a
             href="ProfilePage.html"
             class="navlink navlink-left"
