update name of files

--- a/src/pages/ProfilePage.html
+++ b/src/pages/ProfilePage.html
@@ -106,7 +106,7 @@
           </label>
         </div>
         <div class="nav-center">
-          <a href="index.html" class="navlink navlink-left">Home</a>
+          <a href="../../index.html" class="navlink navlink-left">Home</a>
           <a href="ProfilePage.html" class="navlink navlink-left">Profile</a>
         </div>
 
