--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../styles/homePage.css" />
-    <link rel="stylesheet" href="../styles/modals.css" />
+    <link rel="stylesheet" href="./src/styles/homePage.css" />
+    <link rel="stylesheet" href="./src/styles/modals.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v6.0.0-beta1/css/all.css"
     />
-    <link rel="icon" href="../assets/logo.jpg" type="image/x-icon" />
+    <link rel="icon" href="./src/assets/logo.jpg" type="image/x-icon" />
     <title>HixSocial</title>
   </head>
   <body>
@@ -48,7 +48,7 @@
         <h1>Register Now</h1>
         <form action="#" onsubmit="return false;">
           <label class="center" for="register-img-input">
-            <img id="register-img" src="../assets/male.png" alt="" />
+            <img id="register-img" src="./src/assets/male.png" alt="" />
             <input
               id="register-img-input"
               type="file"
@@ -109,7 +109,7 @@
         <div class="nav-center">
           <a href="index.html" class="navlink navlink-left">Home</a>
           <a
-            href="ProfilePage.html"
+            href="./src/pages/ProfilePage.html"
             class="navlink navlink-left"
             onclick="return navProfileClicked()"
             >Profile</a
@@ -141,7 +141,7 @@
             id="post-publisher-img"
             src=""
             alt=""
-            onerror="this.onerror=null;this.src='../assets/male.png';"
+            onerror="this.onerror=null;this.src='./src/assets/male.png';"
           />
           <h3 id="post-publisher-name">Your name</h3>
         </div>
@@ -180,12 +180,12 @@
 
       <!-- /POST CARD -->
     </div>
-    <script src="../../node_modules/axios/dist/axios.min.js"></script>
-    <script src="../code/api.js"></script>
-    <script src="../code/eventListeners.js"></script>
+    <script src="./node_modules/axios/dist/axios.min.js"></script>
+    <script src="./src/code/api.js"></script>
+    <script src="./src/code/eventListeners.js"></script>
     <script>
       fetchPosts();
     </script>
-    <script src="../models/Post.js"></script>
+    <script src="./src/models/Post.js"></script>
   </body>
 </html>
